--- a/weather/templates/weather/index.html
+++ b/weather/templates/weather/index.html
@@ -49,7 +49,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
     <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
     <div class="w3-container">
-    <h1><b>Pogoda</b></h1>
+    <h1><b><a href="{% url 'home' %}" style="color: black;">Pogoda</a></b></h1>
     <div class="w3-section w3-bottombar w3-padding-16">
 
     </div>
